# BERDL-ENIGMA-CORAL

./: .gitignore  AGENT_LOG.md  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/answers/: README.md  enigma_nitrate_max.jsonl  enigma_strain_FW106_PBR_LB_1_21_publications.jsonl  enigma_strain_FW106_PBR_LB_1_21_refseq_id.jsonl  enigma_strain_MT42_isolation.jsonl  enigma_strain_MT42_prevalence.jsonl  enigma_strain_count.jsonl
benchmarks/queries/: README.md  enigma_nitrate_max.jsonl  enigma_strain_FW106_PBR_LB_1_21_publications.jsonl  enigma_strain_FW106_PBR_LB_1_21_refseq_id.jsonl  enigma_strain_MT42_isolation.jsonl  enigma_strain_MT42_prevalence.jsonl  (+1 more)
duckdb-mcp-server/: README.md  main.py  pyproject.toml
duckdb-mcp-server/deploy/: README.md  duckdb-mcp-server.service
duckdb-mcp-server/src/: db.py  main.py  settings.py
duckdb-mcp-server/src/routes/: __init__.py  delta.py  health.py
duckdb-mcp-server/src/service/: errors.py  models.py
duckdb-mcp-server/tests/: cache_compare.py
schema/: README.md  ddt_ndarray_table.md  enigma_coral_schema.md  sys_ddt_typedef_table.md
skills/: MANIFEST.md  README.md
templates/: Microbe.1.0.xlsx  README.md  SRA_metadata.xlsx  Template_GenomeBatch.xlsx
tests/: test_check_foreign_keys.py  test_repository_paths.py  test_select_changed_tables.py
tools/: README.md  build_brick13_repseq_coral.py  build_brick13_v2_coral.py  fix_failed_ncbi_submission.py  generate_ncbi_submission.py  get_schema.py  get_schema_in_notebook.py  get_table.py  get_table_in_notebook.py  list_databases.py  walk_provenance.py
(+41 files in other folders)
